--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "book-share",
   "version": "1.0.0",
   "description": "Book sharing application",
-  "main": "src/app.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js"
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "method-override": "^2.3.6",
     "mongoose": "^4.5.1"
   },
   "devDependencies": {
