working on setting up routing

--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.1",
-    "express": "^4.13.4",
+    "express": "^4.14.0",
     "express-jwt": "^3.4.0",
     "jsonwebtoken": "^7.1.6",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.7",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
