--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "Thomas Conto",
   "license": "MIT",
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-route": "^1.5.8",
     "body-parser": "^1.15.1",
     "express": "^4.14.0",
     "express-jwt": "^3.4.0",
+    "jquery": "^3.1.0",
     "jsonwebtoken": "^7.1.6",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.7",
