--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
+    "angular-modal-service": "^0.10.1",
     "angular-route": "^1.5.8",
     "body-parser": "^1.15.1",
     "express": "^4.14.0",
