--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
-    "angular-modal-service": "^0.10.1",
     "angular-route": "^1.5.8",
     "body-parser": "^1.15.1",
+    "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "express-jwt": "^3.4.0",
     "jsonwebtoken": "^7.1.6",
