--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^4.5.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "angular": "^1.5.8",
